<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bertanha.calculadoradeip.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/app_name"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/edit_ip"
            android:text="10.0.0.20/30"
            />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Calcular"
            />
        <Button
            android:id="@+id/button_clean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Limpar"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/edit_rede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_rede"
        />

    <EditText
        android:id="@+id/edit_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_broadcast"
        />

    <EditText
        android:id="@+id/edit_first_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_first_host"
        />

    <EditText
        android:id="@+id/edit_last_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_last_host"
        />

    <EditText
        android:id="@+id/edit_qtd_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_qtd_host"
        />

</LinearLayout>
